--- a/AlgoholicsFrontend/src/app/components/header/header.component.css
+++ b/AlgoholicsFrontend/src/app/components/header/header.component.css
@@ -98,4 +98,6 @@ header a:hover {
     color: var(--text-color) !important; /* Desired color specific to this component */
   }
   
-  
+.fa-shopping-cart {
+    color: var(--text-color) !important;
+}
